# esp32-wifi-updates

./: .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig.defaults
flask/: config.py  esp32_service.py  pyproject.toml  run_app.sh
flask/app/: __init__.py  views.py
main/: CMakeLists.txt  am2320.c  certificates.c  cjson.c  components.mk  main.c  mqtt.c  sntp.c  update.c  wifi.c  wifi.h  wifi_provisioning.c
main/include/: am2320.h  certificates.h  json.h  mqtt.h  sntp.h  update.h  wifi.h
mqtt_reader/: Cargo.toml
mqtt_reader/src/: main.rs
server_certs/: wifiupdate.csr  wifiupdate.key  wifiupdate.pem
