[tool.poetry]
name = "esp32-service"
version = "0.1.0"
description = ""
authors = ["Troels Nielsen <bn.troels@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
