[package]
name = "mqtt_reader"
version = "0.1.0"
authors = ["Troels Nielsen <bn.troels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.5"
env_logger = "0.8.2"
rusqlite = "0.24.2"
log = "0.4.11"
json = "0.11.13"
